Fixed contact spacing and background scaling

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -3265,7 +3265,7 @@ input, select, textarea {
 			height: 100%;
 			background-color: #212931;
 			background-image: url("../../images/bg.jpg"), linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../images/overlay.png");
-			background-size: 75% contain,								 auto,														 75% contain;
+			background-size: 67% auto,								 contain,														 67% auto;
 			background-position: top center,								center,														 top center;
 			background-repeat: no-repeat,								no-repeat,													repeat;
 			background-attachment: scroll,								scroll,														scroll;
